# OpenGLlearning

./: .gitmodules  CMakeLists.txt  bb.sh
exe_code/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
external_libs/glad/: CMakeLists.txt
external_libs/glad/include/glad/: glad.h
external_libs/glad/src/: glad.c
external_libs/image/: CMakeLists.txt
